--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -47,3 +47,21 @@
     padding: 10px 20px;
   }
 }
+
+// 按键样式
+kbd {
+  white-space: nowrap;
+  display: inline-block;
+  padding: 2px 4px 4px;
+  line-height: 1;
+  font-size: .8em;
+  color: $grey-8;
+  background: linear-gradient(-225deg,#d5dbe4,#f8f8f8);
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  box-shadow: inset 0 -2px 0 0 #cdcde6,inset 0 0 1px 1px #fff,0 1px 2px 1px rgba(30,35,90,0.4);
+  margin: 0 .2em;
+}
