--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -65,3 +65,10 @@ kbd {
   box-shadow: inset 0 -2px 0 0 #cdcde6,inset 0 0 1px 1px #fff,0 1px 2px 1px rgba(30,35,90,0.4);
   margin: 0 .2em;
 }
+
+// 吸附顶部
+.sticky {
+  position: sticky;
+  z-index: 1;
+  top: 0;
+}
